# closure-compiler

./: .gitignore  .travis.yml  WORKSPACE
externs/: BUILD.bazel
src/com/google/debugging/sourcemap/: BUILD.bazel
src/com/google/debugging/sourcemap/proto/: BUILD.bazel
src/com/google/javascript/jscomp/: BUILD.bazel
src/com/google/javascript/jscomp/graph/: BUILD.bazel
src/com/google/javascript/jscomp/js/: BUILD.bazel
src/com/google/javascript/jscomp/parsing/parser/testing/: BUILD.bazel
src/com/google/javascript/jscomp/parsing/parser/util/format/: BUILD.bazel
src/com/google/javascript/jscomp/regex/: BUILD.bazel
src/com/google/javascript/jscomp/resources/: BUILD.bazel
src/com/google/javascript/jscomp/testing/: BUILD.bazel
src/com/google/javascript/jscomp/type/: BUILD.bazel
src/com/google/javascript/refactoring/: BUILD.bazel
src/com/google/javascript/refactoring/testing/: BUILD.bazel
src/com/google/javascript/rhino/: BUILD.bazel
src/com/google/javascript/rhino/testing/: BUILD.bazel
test/com/google/debugging/sourcemap/: BUILD.bazel
test/com/google/javascript/jscomp/: BUILD.bazel
test/com/google/javascript/jscomp/bundle/: BUILD.bazel
test/com/google/javascript/jscomp/graph/: BUILD.bazel
test/com/google/javascript/jscomp/ijs/: BUILD.bazel
test/com/google/javascript/jscomp/lint/: BUILD.bazel
test/com/google/javascript/jscomp/parsing/: BUILD.bazel
test/com/google/javascript/jscomp/parsing/parser/: BUILD.bazel
test/com/google/javascript/jscomp/parsing/parser/util/format/: BUILD.bazel
test/com/google/javascript/jscomp/regex/: BUILD.bazel
test/com/google/javascript/jscomp/transpile/: BUILD.bazel
test/com/google/javascript/refactoring/: BUILD.bazel
test/com/google/javascript/rhino/: BUILD.bazel
test/com/google/javascript/rhino/jstype/: BUILD.bazel
