## Copyright 2018 The Closure Compiler Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

java_library(
    name = "refactoring",
    srcs = [
        "ApplySuggestedFixes.java",
        "CodeReplacement.java",
        "ErrorToFixMapper.java",
        "FixingErrorManager.java",
        "JsFlumeCallback.java",
        "JsSourceMatcher.java",
        "Match.java",
        "Matcher.java",
        "Matchers.java",
        "NodeMetadata.java",
        "RefactoringDriver.java",
        "RefactoringUtils.java",
        "RefasterJsScanner.java",
        "Scanner.java",
        "SuggestedFix.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/com/google/javascript/jscomp",
        "//src/com/google/javascript/jscomp:CommandLineRunner",
        "//src/com/google/javascript/rhino",
        "@args4j//jar",
        "@com_google_auto_value//jar",
        "@error_prone_annotations//jar",
        "@guava//jar",
        "@jsr305//jar",
    ],
)

java_binary(
    name = "RefasterJs",
    srcs = [
        "RefasterJs.java",
    ],
    main_class = "com.google.javascript.refactoring.RefasterJs",
    visibility = ["//visibility:public"],
    deps = [
        ":refactoring",
        "//src/com/google/javascript/jscomp",
        "//src/com/google/javascript/jscomp:CommandLineRunner",
        "@args4j//jar",
        "@guava//jar",
    ],
)
