## Copyright 2018 The Closure Compiler Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

java_proto_library(
    name = "mapping_java_proto",
    deps = [
        "//src/com/google/debugging/sourcemap/proto:mapping_proto",
    ],
)

java_test(
    name = "Base64Test",
    srcs = [
        "Base64Test.java",
    ],
    test_class = "com.google.debugging.sourcemap.Base64Test",
    deps = [
        "//src/com/google/debugging/sourcemap:Base64",
        "@guava//jar",
        "@truth//jar",
    ],
)

java_test(
    name = "Base64VLQTest",
    srcs = [
        "Base64VLQTest.java",
    ],
    test_class = "com.google.debugging.sourcemap.Base64VLQTest",
    deps = [
        "//src/com/google/debugging/sourcemap:Base64VLQ",
        "@guava//jar",
        "@truth//jar",
    ],
)

java_test(
    name = "SourceMapConsumerV3Test",
    srcs = [
        "SourceMapConsumerV3Test.java",
    ],
    test_class = "com.google.debugging.sourcemap.SourceMapConsumerV3Test",
    deps = [
        "//src/com/google/debugging/sourcemap:SourceMapConsumerV3",
        "@gson//jar",
        "@guava//jar",
        "@truth//jar",
    ],
)

java_test(
    name = "SourceMapGeneratorV3Test",
    srcs = [
        "SourceMapGeneratorV3Test.java",
    ],
    test_class = "com.google.debugging.sourcemap.SourceMapGeneratorV3Test",
    deps = [
        ":SourceMapTestCase",
        "//src/com/google/debugging/sourcemap:FilePosition",
        "//src/com/google/debugging/sourcemap:SourceMapConsumer",
        "//src/com/google/debugging/sourcemap:SourceMapGeneratorV3",
        "//src/com/google/debugging/sourcemap:SourceMapSection",
        "//src/com/google/debugging/sourcemap:SourceMapSupplier",
        "//src/com/google/javascript/jscomp",
        "@gson//jar",
        "@guava//jar",
        "@truth//jar",
    ],
)

java_library(
    name = "SourceMapTestCase",
    testonly = True,
    srcs = [
        "SourceMapTestCase.java",
    ],
    visibility = ["//test:__subpackages__"],
    deps = [
        ":mapping_java_proto",
        "//src/com/google/debugging/sourcemap:FilePosition",
        "//src/com/google/debugging/sourcemap:SourceMapConsumer",
        "//src/com/google/debugging/sourcemap:SourceMapConsumerFactory",
        "//src/com/google/debugging/sourcemap:SourceMapParseException",
        "//src/com/google/debugging/sourcemap:SourceMapSupplier",
        "//src/com/google/debugging/sourcemap:SourceMapping",
        "//src/com/google/javascript/jscomp",
        "@gson//jar",
        "@guava//jar",
        "@junit//jar",
        "@truth//jar",
    ],
)

java_test(
    name = "UtilTest",
    srcs = [
        "UtilTest.java",
    ],
    test_class = "com.google.debugging.sourcemap.UtilTest",
    deps = [
        "//src/com/google/debugging/sourcemap:Util",
        "@guava//jar",
        "@truth//jar",
    ],
)
