## Copyright 2018 The Closure Compiler Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

java_library(
    name = "js",
    resources = [
        "base.js",
        "build_polyfill_table.js",
        "es6/array.js",
        "es6/array/copywithin.js",
        "es6/array/entries.js",
        "es6/array/fill.js",
        "es6/array/find.js",
        "es6/array/findindex.js",
        "es6/array/from.js",
        "es6/array/includes.js",
        "es6/array/keys.js",
        "es6/array/of.js",
        "es6/array/values.js",
        "es6/async_generator_wrapper.js",
        "es6/conformance.js",
        "es6/execute_async_generator.js",
        "es6/generator_engine.js",
        "es6/map.js",
        "es6/math.js",
        "es6/math/acosh.js",
        "es6/math/asinh.js",
        "es6/math/atanh.js",
        "es6/math/cbrt.js",
        "es6/math/clz32.js",
        "es6/math/cosh.js",
        "es6/math/expm1.js",
        "es6/math/fround.js",
        "es6/math/hypot.js",
        "es6/math/imul.js",
        "es6/math/log10.js",
        "es6/math/log1p.js",
        "es6/math/log2.js",
        "es6/math/sign.js",
        "es6/math/sinh.js",
        "es6/math/tanh.js",
        "es6/math/trunc.js",
        "es6/modules/runtime.js",
        "es6/nopolyfill.js",
        "es6/number.js",
        "es6/number/constants.js",
        "es6/number/isfinite.js",
        "es6/number/isinteger.js",
        "es6/number/isnan.js",
        "es6/number/issafeinteger.js",
        "es6/number/parsefloat.js",
        "es6/number/parseint.js",
        "es6/object.js",
        "es6/object/assign.js",
        "es6/object/entries.js",
        "es6/object/getownpropertydescriptors.js",
        "es6/object/getownpropertysymbols.js",
        "es6/object/is.js",
        "es6/object/setprototypeof.js",
        "es6/object/values.js",
        "es6/promise.js",
        "es6/promise/finally.js",
        "es6/promise/promise.js",
        "es6/reflect.js",
        "es6/reflect/apply.js",
        "es6/reflect/construct.js",
        "es6/reflect/defineproperty.js",
        "es6/reflect/deleteproperty.js",
        "es6/reflect/get.js",
        "es6/reflect/getownpropertydescriptor.js",
        "es6/reflect/getprototypeof.js",
        "es6/reflect/has.js",
        "es6/reflect/isextensible.js",
        "es6/reflect/ownkeys.js",
        "es6/reflect/preventextensions.js",
        "es6/reflect/set.js",
        "es6/reflect/setprototypeof.js",
        "es6/set.js",
        "es6/string.js",
        "es6/string/codepointat.js",
        "es6/string/endswith.js",
        "es6/string/fromcodepoint.js",
        "es6/string/includes.js",
        "es6/string/padend.js",
        "es6/string/padstart.js",
        "es6/string/repeat.js",
        "es6/string/startswith.js",
        "es6/symbol.js",
        "es6/util/arrayfromiterable.js",
        "es6/util/arrayfromiterator.js",
        "es6/util/arrayiterator.js",
        "es6/util/assign.js",
        "es6/util/construct.js",
        "es6/util/inherits.js",
        "es6/util/iteratorfromarray.js",
        "es6/util/makeasynciterator.js",
        "es6/util/makeiterator.js",
        "es6/util/setprototypeof.js",
        "es6/weakmap.js",
        "es6/weakset.js",
        "es6_dart_runtime.js",
        "es6_runtime.js",
        "modules.js",
        "polyfills.txt",
        "runtime_type_check.js",
        "util/checkstringargs.js",
        "util/defineproperty.js",
        "util/defines.js",
        "util/finddescriptor.js",
        "util/findinternal.js",
        "util/global.js",
        "util/objectcreate.js",
        "util/owns.js",
        "util/polyfill.js",
        "util/reflectobject.js",
        "util/stringpadding.js",
    ],
    visibility = [
        "//src/com/google/javascript/jscomp:__pkg__",
    ],
)
