## Copyright 2018 The Closure Compiler Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

java_test(
    name = "GraphColoringTest",
    srcs = [
        "GraphColoringTest.java",
    ],
    test_class = "com.google.javascript.jscomp.graph.GraphColoringTest",
    deps = [
        "//src/com/google/javascript/jscomp/graph",
        "@guava//jar",
        "@truth//jar",
    ],
)

java_test(
    name = "GraphReachabilityTest",
    srcs = [
        "GraphReachabilityTest.java",
    ],
    test_class = "com.google.javascript.jscomp.graph.GraphReachabilityTest",
    deps = [
        "//src/com/google/javascript/jscomp/graph",
        "@truth//jar",
    ],
)

java_test(
    name = "GraphTest",
    srcs = [
        "GraphTest.java",
    ],
    test_class = "com.google.javascript.jscomp.graph.GraphTest",
    deps = [
        "//src/com/google/javascript/jscomp/graph",
        "@truth//jar",
    ],
)

java_test(
    name = "StandardUnionFindTest",
    srcs = [
        "StandardUnionFindTest.java",
    ],
    test_class = "com.google.javascript.jscomp.graph.StandardUnionFindTest",
    deps = [
        "//src/com/google/javascript/jscomp/graph",
        "@guava//jar",
        "@truth//jar",
    ],
)
