## Copyright 2018 The Closure Compiler Authors. All rights reserved.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##    http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

[java_test(
    name = name[:-5],
    srcs = glob([
        "*.java",
    ]),
    test_class = "com.google.javascript.jscomp.ijs." + name[:-5],
    deps = [
        "//src/com/google/javascript/jscomp",
        "//test/com/google/javascript/jscomp",
        "@guava//jar",
        "@guava_testlib//jar",
        "@mockito//jar",
        "@objenesis//jar",
        "@truth//jar",
    ],
) for name in glob(["*.java"]) if name.endswith("Test.java")]
